2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/threadqextractwithproxy.c: Conditionalize code that is only
	required in multiprocessing configuration.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectget.c: Revert.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/timergettime.c: Include rtems/score/timespec.h

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/preinstall.am, posix/include/aio.h, posix/include/devctl.h,
	posix/include/mqueue.h, posix/include/sched.h,
	posix/include/semaphore.h, posix/include/rtems/posix/cancel.h,
	posix/include/rtems/posix/priority.h,
	posix/include/rtems/posix/psignal.h,
	posix/include/rtems/posix/threadsup.h,
	posix/include/rtems/posix/timer.h,
	posix/inline/rtems/posix/priority.inl,
	posix/src/barrierattrdestroy.c, posix/src/barrierattrgetpshared.c,
	posix/src/barrierattrinit.c, posix/src/barrierattrsetpshared.c,
	posix/src/cancel.c, posix/src/cancelrun.c, posix/src/cleanuppop.c,
	posix/src/cleanuppush.c, posix/src/cond.c,
	posix/src/condattrdestroy.c, posix/src/condattrgetpshared.c,
	posix/src/condattrinit.c, posix/src/condattrsetpshared.c,
	posix/src/condbroadcast.c, posix/src/conddefaultattributes.c,
	posix/src/conddestroy.c, posix/src/condinit.c,
	posix/src/condsignal.c, posix/src/condsignalsupp.c,
	posix/src/condwait.c, posix/src/condwaitsupp.c, posix/src/key.c,
	posix/src/keycreate.c, posix/src/keydelete.c,
	posix/src/keygetspecific.c, posix/src/keyrundestructors.c,
	posix/src/keysetspecific.c, posix/src/mqueue.c,
	posix/src/mqueueclose.c, posix/src/mqueuecreatesupp.c,
	posix/src/mqueuedeletesupp.c, posix/src/mqueuegetattr.c,
	posix/src/mqueuenametoid.c, posix/src/mqueuenotify.c,
	posix/src/mqueueopen.c, posix/src/mqueuereceive.c,
	posix/src/mqueuerecvsupp.c, posix/src/mqueuesend.c,
	posix/src/mqueuesendsupp.c, posix/src/mqueuesetattr.c,
	posix/src/mqueueunlink.c, posix/src/mutex.c,
	posix/src/mutexattrdestroy.c, posix/src/mutexattrgetprioceiling.c,